gdfg
ud@ud:~/Jesus/HPC$ ./benchmark.sh
Checking dependencies...
Compiling programs...
Compiling sequential version...
Compiling OpenMP version...
practica2.c: In function ‘multiplicar_matriz_dispersa_vector’:
practica2.c:149:13: error: invalid branch to/from OpenMP structured block
  149 |             return;
      |             ^~~~~~
